# ShaderToyOpenGL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
resources/: cube.vert  triangle.frag  triangle.vert  triangleRainbow.vert
resources/planet/: source.txt
resources/shaders/: bezToLine.geom  bezToLineDashed.frag  bezToLineDashed.geom  bezToLineDashed.vert  bezToShortCurve.geom  bezier.frag  bezier.geom  bezier.vert  bezier2.geom  cube.frag  cube.vert  framebuffer.frag  framebuffer.vert  imgui.frag  imgui.vert  model.frag  model.vert  shadertoy.vert  skybox.frag  skybox.vert  triangle.frag  triangle.vert  triangleRainbow.vert
resources/shaders/ShaderToy/: clouds.ShaderToy  digitalbrain.ShaderToy  fractalTrees.ShaderToy  fractals2.ShaderToy  mengersponge.ShaderToy  raymarchShapes.ShaderToy  tunnel.ShaderToy  water.ShaderToy
src/: CMakeLists.txt  main.cpp
src/Drawing/: GLBezierCurve.cpp  GLBezierCurve.h  GLCamera.cpp  GLCamera.h  GLCubeRenderable.cpp  GLCubeRenderable.h  GLCubesRenderable.cpp  GLCubesRenderable.h  GLFrameBuffersRenderable.cpp  GLFrameBuffersRenderable.h  GLGalleryScene.cpp  GLGalleryScene.h  GLInput.cpp  GLInputManager.cpp  GLInputManager.h  GLMeshRenderable.cpp  GLMeshRenderable.h  GLRenderWindow.cpp  GLRenderWindow.h  GLRenderable.cpp  GLRenderable.h  GLShaderToyRenderable.cpp  GLShaderToyRenderable.h  GLSkyboxRenderable.cpp  GLSkyboxRenderable.h  ImguiImpl.cpp  ImguiImpl.h
src/Drawing/Model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/Util/: FastDelegate.h  FileUtils.cpp  FileUtils.h  ShaderUtils.cpp  ShaderUtils.h
